[package]
name = "dcon"
version = "0.1.0"
edition = "2021"
description = "Connect to a dev container's tmux session from your project directory"
license = "MIT"
repository = "https://github.com/totophe/remote-code-toolbox"

[[bin]]
name = "dcon"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs-next = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
